--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<iframe src='https://my.spline.design/mouseinteractiveheropage-fcd205b7da29bc2a3242831226d1ef62/' frameborder='0' width='100%' height='100%'></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Spline</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100vw;
+            height: 100vh;
+            display: block;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://my.spline.design/mouseinteractiveheropage-fcd205b7da29bc2a3242831226d1ef62/" frameborder="0"></iframe>
+</body>
+</html>
