--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Buttons -->
     <div class="button-container">
         <a href="https://github.com/WRAVENproject" target="_blank">GitHub</a>
-        <a href="https://wraven.org/blog" target="_blank">Blog</a>
+        <a href="https://blog.wraven.org" target="_blank">Blog</a>
     </div>
 
 </body>
