--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="en">
     
-    <!-- Open Graph-->
+    <!-- Meta Card -->
     <meta property="og:title" content="WRAVEN | Cybersecurity">
     <meta property="og:description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more.">
     <meta property="og:image" content="https://wraven.org/imgs/og-image.png">
@@ -23,10 +23,7 @@
     <meta name="twitter:description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more.">
     <meta name="twitter:image" content="https://wraven.org/imgs/og-image.png">
     
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
-
-    <!-- Custom Font (Google Fonts) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
     <style>
@@ -50,7 +47,7 @@
         /* Button Container */
         .button-container {
             position: fixed;
-            bottom: 50px; /* Moved up slightly */
+            bottom: 50px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
@@ -59,11 +56,11 @@
         /* Buttons */
         .button-container a {
             text-decoration: none;
-            padding: 14px 24px; /* Slightly bigger */
+            padding: 14px 24px;
             background: white;
             color: black;
-            font-size: 18px; /* Slightly bigger */
-            font-weight: 600; /* Slightly bolder */
+            font-size: 18px;
+            font-weight: 600;
             border-radius: 30px;
             transition: 0.3s ease;
             border: 2px solid black;
@@ -78,7 +75,6 @@
 
     <iframe src="https://my.spline.design/mouseinteractiveheropage-fcd205b7da29bc2a3242831226d1ef62/" frameborder="0"></iframe>
 
-    <!-- Buttons -->
     <div class="button-container">
         <a href="https://github.com/WRAVENproject" target="_blank">GitHub</a>
         <a href="https://blog.wraven.org" target="_blank">Blog</a>
