Added more buttons
who doesnt love buttons

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     <div class="button-container">
         <a href="https://github.com/WRAVENproject" target="_blank">GitHub</a>
         <a href="https://blog.wraven.org" target="_blank">Blog</a>
+        <a href="https://public.wraven.org" target="_blank">Threat Dashboard</a>
+        <a href="https://wraven.myspreadshop.com" target="_blank">Merch</a>
+        <a href="https://wravenproject.github.io/ECXIncSite/" target="_blank">CTF Team</a>
     </div>
 
 </body>
