--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <a href="https://public.wraven.org" target="_blank">Threat Dashboard</a>
         <a href="https://wraven.myspreadshop.com" target="_blank">Merch</a>
         <a href="https://wravenproject.github.io/ECXIncSite/" target="_blank">CTF Team</a>
+        <a href="https://linktr.ee/wravenproject" target="_blank">Socials</a>
     </div>
 
 </body>
