--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
         <a href="https://wraven.myspreadshop.com" target="_blank">Merch</a>
         <a href="https://wravenproject.github.io/ECXIncSite/" target="_blank">CTF Team</a>
         <a href="https://linktr.ee/wravenproject" target="_blank">Socials</a>
+        <a href="https://experiencewmu.wmich.edu/organization/wraven" target="_blank">ExperienceWMU</a>
+
     </div>
 
 </body>
