--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="WRAVEN">
-    <title>WRAVEN | Cybersecurity</title>
+    <title>WRAVEN | WMU Cybersecurity Group</title>
     <meta name="description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more. Learn more...">
-    <meta name="keywords" content="cybersecurity, WMU, WRAVEN, hacking, CTF, research">
+    <meta name="keywords" content="WMU cybersecurity, Western Michigan University, student CTF, cyber research, wravenproject, WRAVEN, WMU, hacking, CTF, research">
     <meta name="robots" content="index, follow">
     <meta name="language" content="en">
     
     <!-- Open Graph -->
-    <meta property="og:title" content="WRAVEN | Cybersecurity">
+    <meta property="og:title" content="WRAVEN | WMU Cybersecurity Group">
     <meta property="og:description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more.">
     <meta property="og:image" content="https://wraven.org/imgs/og-image.png">
     <meta property="og:url" content="https://wraven.org">
@@ -21,7 +21,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WRAVEN | Cybersecurity">
+    <meta name="twitter:title" content="WRAVEN | WMU Cybersecurity Group">
     <meta name="twitter:description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more.">
     <meta name="twitter:image" content="https://wraven.org/imgs/og-image.png">
     <meta name="twitter:site" content="@wravenproject">
