--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <link rel="canonical" href="https://wraven.org/">
     
     <!-- Icons -->
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/imgs/littlelogo.png">
+    <link rel="apple-touch-icon" href="/imgs/littlelogo.png">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
