--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WRAVEN | Cybersecurity">
+    <meta name="twitter:title" content="WRAVEN | Cybersecurity @ WMU">
     <meta name="twitter:description" content="A student-run cybersecurity organization based at WMU. We participate in Research, CTF Competitions, Community Outreach & more.">
     <meta name="twitter:image" content="https://wraven.org/imgs/og-image.png">
     <meta name="twitter:site" content="@wravenproject">
@@ -335,7 +335,7 @@
                 <div class="wraven-info">
                     <div class="info-section">
                         <h3>🛡️ Our Mission</h3>
-                        <p>WRAVEN (Western Research Advisory for Vulnerabilities Exploits & Networks) is Western Michigan University's premier cybersecurity research organization. We're dedicated to advancing cybersecurity knowledge through hands-on research, competitive CTF participation, and real-world threat analysis.</p>
+                        <p>WRAVEN (Western Research Advisory for Vulnerabilities Exploits & Networks) is Western Michigan University's premier cybersecurity registered student organization. We're dedicated to advancing cybersecurity knowledge through hands-on research, competitive CTF participation, and real-world threat analysis.</p>
                     </div>
                     
                     <div class="info-section">
