--- a/store/index.html
+++ b/store/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://store.wraven.org">
+  <meta http-equiv="refresh" content="0; url=https://wraven.myspreadshop.com">
   <title>Redirecting…</title>
 </head>
 <body>
