--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                         <span class="link-text">Merch Store</span>
                         <span class="link-arrow">→</span>
                     </a>
-                    <a href="mailto:contact@wraven.org" class="link-btn">
-                        <span class="link-text">Contact Team</span>
+                    <a href="https://discord.gg/uYkvSU8DHy" class="link-btn" target="_blank">
+                        <span class="link-text">WRAVEN Discord</span>
                         <span class="link-arrow">→</span>
                     </a>
                 </div>
