added tor info button

--- a/index.html
+++ b/index.html
@@ -313,6 +313,10 @@
                 </div>
                 <div class="footer-center">
                     <div class="contact">Contact: contact@wraven.org</div>
+                    <a href="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion" class="tor-access" target="_blank" title="Access via Tor">
+                        <span class="tor-icon">🧅</span>
+                        <span>Tor Access Available</span>
+                    </a>
                 </div>
                 <div class="footer-right">
                     <div class="last-update">Last updated: Jul 7 2025 14:32 EST</div>
