Update threat overview

--- a/index.html
+++ b/index.html
@@ -95,41 +95,41 @@
                     <div class="threat-item">
                         <div class="threat-indicator high"></div>
                         <div class="threat-content">
-                            <div class="threat-title">APT-C-36 Infrastructure Mapping</div>
-                            <div class="threat-meta">CVE-2024-4947 | Active campaign targeting critical infrastructure</div>
+                            <div class="threat-title">Scattered Spider Lateral Movement Spike</div>
+                            <div class="threat-meta">T1078 | Surge in Okta and SaaS session hijacking activity</div>
                             <div class="threat-tags">
-                                <span class="tag tag-apt">APT-C-36</span>
-                                <span class="tag tag-cve">CVE-2024-4947</span>
-                                <span class="tag tag-technique">T1190</span>
+                                <span class="tag tag-apt">SCATTERED-SPIDER</span>
+                                <span class="tag tag-technique">T1078</span>
+                                <span class="tag tag-saas">SaaS</span>
                             </div>
                         </div>
-                        <div class="threat-time">July 7th</div>
+                        <div class="threat-time">July 14th</div>
+                    </div>
+                    <div class="threat-item">
+                        <div class="threat-indicator high"></div>
+                        <div class="threat-content">
+                            <div class="threat-title">Volt Typhoon Persistence Methods</div>
+                            <div class="threat-meta">T1059.001 | Living-off-the-land scripts in U.S. critical infrastructure</div>
+                            <div class="threat-tags">
+                                <span class="tag tag-apt">VOLT-TYPHOON</span>
+                                <span class="tag tag-technique">T1059</span>
+                                <span class="tag tag-ioc">LOTL</span>
+                            </div>
+                        </div>
+                        <div class="threat-time">July 10th</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-indicator medium"></div>
                         <div class="threat-content">
-                            <div class="threat-title">Scattered Spider Phishing Wave</div>
-                            <div class="threat-meta">T1566.001 | Social engineering targeting SaaS platforms</div>
+                            <div class="threat-title">Qilin Ransomware Hits U.S. Manufacturing</div>
+                            <div class="threat-meta">CISA Alert | Ongoing extortion targeting SMB industrial systems</div>
                             <div class="threat-tags">
-                                <span class="tag tag-apt">SCATTERED-SPIDER</span>
-                                <span class="tag tag-phishing">PHISHING</span>
-                                <span class="tag tag-technique">T1566</span>
+                                <span class="tag tag-apt">QILIN</span>
+                                <span class="tag tag-technique">T1486</span>
+                                <span class="tag tag-sector">MANUFACTURING</span>
                             </div>
                         </div>
-                        <div class="threat-time">July 3rd</div>
-                    </div>
-                    <div class="threat-item">
-                        <div class="threat-indicator low"></div>
-                        <div class="threat-content">
-                            <div class="threat-title">Salt Typhoon Attribution Update</div>
-                            <div class="threat-meta">IOC: 23 new domains | Telecom sector targeting patterns</div>
-                            <div class="threat-tags">
-                                <span class="tag tag-apt">SALT-TYPHOON</span>
-                                <span class="tag tag-ioc">IOC</span>
-                                <span class="tag tag-technique">T1078</span>
-                            </div>
-                        </div>
-                        <div class="threat-time">June 22nd</div>
+                        <div class="threat-time">July 5th</div>
                     </div>
                 </div>
             </section>
