--- a/index.html
+++ b/index.html
@@ -97,39 +97,45 @@
                         <div class="threat-content">
                             <div class="threat-title">Scattered Spider Lateral Movement Spike</div>
                             <div class="threat-meta">T1078 | Surge in Okta and SaaS session hijacking activity</div>
-                            <div class="threat-tags">
-                                <span class="tag tag-apt">SCATTERED-SPIDER</span>
-                                <span class="tag tag-technique">T1078</span>
-                                <span class="tag tag-saas">SaaS</span>
+                            <div class="threat-footer">
+                                <div class="threat-tags">
+                                    <span class="tag tag-apt">SCATTERED-SPIDER</span>
+                                    <span class="tag tag-technique">T1078</span>
+                                    <span class="tag tag-SaaS">SaaS</span>
+                                </div>
+                                <div class="threat-time">July 14th</div>
                             </div>
                         </div>
-                        <div class="threat-time">July 14th</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-indicator high"></div>
                         <div class="threat-content">
                             <div class="threat-title">Volt Typhoon Persistence Methods</div>
                             <div class="threat-meta">T1059.001 | Living-off-the-land scripts in U.S. critical infrastructure</div>
-                            <div class="threat-tags">
-                                <span class="tag tag-apt">VOLT-TYPHOON</span>
-                                <span class="tag tag-technique">T1059</span>
-                                <span class="tag tag-ioc">LOTL</span>
+                            <div class="threat-footer">
+                                <div class="threat-tags">
+                                    <span class="tag tag-apt">VOLT-TYPHOON</span>
+                                    <span class="tag tag-technique">T1059</span>
+                                    <span class="tag tag-ioc">LOTL</span>
+                                </div>
+                                <div class="threat-time">July 10th</div>
                             </div>
                         </div>
-                        <div class="threat-time">July 10th</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-indicator medium"></div>
                         <div class="threat-content">
                             <div class="threat-title">Qilin Ransomware Hits U.S. Manufacturing</div>
                             <div class="threat-meta">CISA Alert | Ongoing extortion targeting SMB industrial systems</div>
-                            <div class="threat-tags">
-                                <span class="tag tag-apt">QILIN</span>
-                                <span class="tag tag-technique">T1486</span>
-                                <span class="tag tag-sector">MANUFACTURING</span>
+                            <div class="threat-footer">
+                                <div class="threat-tags">
+                                    <span class="tag tag-apt">QILIN</span>
+                                    <span class="tag tag-technique">T1486</span>
+                                    <span class="tag tag-sector">MANUFACTURING</span>
+                                </div>
+                                <div class="threat-time">July 5th</div>
                             </div>
                         </div>
-                        <div class="threat-time">July 5th</div>
                     </div>
                 </div>
             </section>
