--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <div class="threat-tags">
                                     <span class="tag tag-apt">SCATTERED-SPIDER</span>
                                     <span class="tag tag-technique">T1078</span>
-                                    <span class="tag tag-SaaS">SaaS</span>
+                                    <span class="tag tag-saas">SaaS</span>
                                 </div>
                                 <div class="threat-time">July 14th</div>
                             </div>
