--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <meta name="twitter:site" content="@wravenproject">
     <meta name="twitter:creator" content="@wravenproject">
     
+    <!-- Tor & Privacy Metadata -->
+    <meta name="onion-location" content="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion">
+    <meta name="tor-relay" content="true">
+    <meta name="privacy-policy" content="https://wraven.org/privacy">
+    <meta name="referrer" content="no-referrer">
+    
     <!-- Theme & Canonical -->
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://wraven.org/">
