Name to http-equiv

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="twitter:creator" content="@wravenproject">
     
     <!-- Tor Metadata -->
-    <meta name="onion-location" content="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion">
+    <meta http-equiv="onion-location" content="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion">
     
     <!-- Theme & Canonical -->
     <meta name="theme-color" content="#000000">
