--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="WRAVEN">
-    <title>WRAVEN - WMU Cybersecurity | Western Michigan University's Premier Cybersecurity Organization</title>
+    <title>WRAVEN - WMU Cybersecurity</title>
     <meta name="description" content="WRAVEN is Western Michigan University's premier cybersecurity organization. Join WMU's leading cybersecurity club for CTF competitions, threat research, and hands-on security training at Western Michigan University.">
     <meta name="keywords" content="WRAVEN, WMU cybersecurity, Western Michigan University cybersecurity, WMU, cybersecurity club WMU, WMU hacking, CTF WMU, cybersecurity research WMU, Western Michigan University security, WMU computer security, cybersecurity organization WMU, WMU student organizations">
     <meta name="robots" content="index, follow">
@@ -139,7 +139,7 @@
                         <img src="https://wraven.org/imgs/widelogo.png" alt="WRAVEN - Western Michigan University Cybersecurity Organization Logo" class="logo-image">
                         <span class="logo-text">WRAVEN</span>
                     </h1>
-                    <span class="subtitle">Western Research Advisory for Vulnerabilities, Exploits, & Networks - WMU's Premier Cybersecurity Organization</span>
+                    <span class="subtitle">Western Research Advisory for Vulnerabilities, Exploits, & Networks</span>
                 </div>
                 <div class="header-right">
                     <div class="status-indicators">
@@ -289,8 +289,8 @@
                     <div class="team-info-section">
                         <div class="team-overview">
                             <div class="team-description">
-                                <h3>ECX Inc. - Western Michigan University Cybersecurity Team</h3>
-                                <p>CTF team run by Computer Club & WRAVEN @ Western Michigan University (WMU)</p>
+                                <h3>ECX Inc.</h3>
+                                <p>CTF team run by Computer Club & WRAVEN @ WMU</p>
                                 <div class="team-aliases">
                                     <span class="alias">WMU-CCLUB</span>
                                     <span class="alias">WRAVEN</span>
