--- a/index.html
+++ b/index.html
@@ -382,6 +382,47 @@
                     </a>
                 </div>
             </section>
+
+            <!-- Sponsor & Privacy Bento -->
+            <!-- Sponsors Bento -->
+            <section class="grid-item sponsor-bento">
+                <div class="section-header">
+                    <h2>Sponsors</h2>
+                </div>
+                <div class="bento-box sponsors">
+                    <div class="sponsor-list">
+                        <div class="sponsor-item">
+                            <img src="/imgs/birdsquare.png" alt="BirdSec" class="sponsor-img">
+                            <span class="sponsor-name">BirdSec</span>
+                        </div>
+                        <div class="sponsor-item">
+                            <img src="/imgs/littlelogo.png" alt="WRAVEN Foundation" class="sponsor-img">
+                            <span class="sponsor-name">WRAVEN Foundation</span>
+                        </div>
+                        <div class="sponsor-item">
+                            <img src="/imgs/icon-192x192.png" alt="CyberKzoo" class="sponsor-img">
+                            <span class="sponsor-name">CyberKzoo</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Privacy & Tor Bento -->
+            <section class="grid-item privacy-tor-bento">
+                <div class="section-header">
+                    <h2>Privacy & Tor</h2>
+                </div>
+                <div class="bento-box privacy-tor">
+                    <a href="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion" class="tor-access" target="_blank" title="Access via Tor">
+                        <span class="tor-icon">🧅</span>
+                        <span>Tor Access</span>
+                    </a>
+                    <a href="/privacy/" class="privacy-btn" title="Privacy Policy">
+                        <span class="privacy-icon">🔒</span>
+                        <span>Privacy Policy</span>
+                    </a>
+                </div>
+            </section>
         </main>
 
         <!-- Footer -->
@@ -396,10 +437,6 @@
                 </div>
                 <div class="footer-center">
                     <div class="contact">Contact: contact@wraven.org</div>
-                    <a href="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion" class="tor-access" target="_blank" title="Access via Tor">
-                        <span class="tor-icon">🧅</span>
-                        <span>Tor Access Available</span>
-                    </a>
                 </div>
                 <div class="footer-right">
                     <div class="last-update">Last updated: Jul 7 2025 14:32 EST</div>
