--- a/index.html
+++ b/index.html
@@ -387,6 +387,10 @@
             <section class="grid-item sponsor-bento">
                 <div class="section-header">
                     <h2>Sponsors</h2>
+                    <div class="feed-status">
+                        <span class="status-dot status-live"></span>
+                        Active Partners
+                    </div>
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
@@ -409,7 +413,11 @@
             <!-- Privacy & Tor Bento -->
             <section class="grid-item privacy-tor-bento">
                 <div class="section-header">
-                    <h2>Privacy & Tor</h2>
+                    <h2>Privacy & Security</h2>
+                    <div class="feed-status">
+                        <span class="status-dot status-armed"></span>
+                        Secure Access
+                    </div>
                 </div>
                 <div class="bento-box privacy-tor">
                     <a href="http://fxyk2rjld5uqnkpqazbgt6w6yvq27vejjrg3brgtcdl3dm2bmq5c4nyd.onion" class="tor-access" target="_blank" title="Access via Tor">
@@ -418,6 +426,10 @@
                     </a>
                     <a href="/privacy/" class="privacy-btn" title="Privacy Policy">
                         <span class="privacy-icon">🔒</span>
+                        <span>Privacy Policy</span>
+                    </a>
+                </div>
+            </section>
                         <span>Privacy Policy</span>
                     </a>
                 </div>
