--- a/index.html
+++ b/index.html
@@ -386,31 +386,27 @@
             <!-- Sponsors Bento -->
             <section class="grid-item sponsor-bento">
                 <div class="section-header">
-                    <h2>Sponsors</h2>
-                    <div class="feed-status">
-                        <span class="status-dot status-live"></span>
-                        Active Partners
-                    </div>
+                    <h2>Sponsors & Partners</h2>
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
                         <div class="sponsor-item">
                             <img src="/imgs/birdsquare.png" alt="BirdSec" class="sponsor-img">
-                            <span class="sponsor-name">BirdSec</span>
+                            <span class="sponsor-name">You?</span>
                         </div>
                         <div class="sponsor-item">
-                            <img src="/imgs/littlelogo.png" alt="WRAVEN Foundation" class="sponsor-img">
-                            <span class="sponsor-name">WRAVEN Foundation</span>
+                            <img src="/imgs/hcb-logo.png" alt="HCB - The Hack Foundation" class="sponsor-img">
+                            <span class="sponsor-name"><strong>HCB</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Fiscal Sponsor: The Hack Foundation</span></span>
                         </div>
                         <div class="sponsor-item">
-                            <img src="/imgs/icon-192x192.png" alt="CyberKzoo" class="sponsor-img">
-                            <span class="sponsor-name">CyberKzoo</span>
+                            <img src="/imgs/wsaac-logo.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
+                            <span class="sponsor-name"><strong>WSAAC</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Western Student Association Allocations Committee</span></span>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <!-- Privacy & Tor Bento -->
+            <!-- Privacy & Security Bento -->
             <section class="grid-item privacy-tor-bento">
                 <div class="section-header">
                     <h2>Privacy & Security</h2>
