--- a/index.html
+++ b/index.html
@@ -394,14 +394,14 @@
                             <img src="/imgs/birdsquare.png" alt="BirdSec" class="sponsor-img">
                             <span class="sponsor-name">You?</span>
                         </div>
-                        <div class="sponsor-item">
+                        <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <img src="/imgs/hcb-logo.png" alt="HCB - The Hack Foundation" class="sponsor-img">
                             <span class="sponsor-name"><strong>HCB</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Fiscal Sponsor: The Hack Foundation</span></span>
-                        </div>
-                        <div class="sponsor-item">
+                        </a>
+                        <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
                             <img src="/imgs/wsaac-logo.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
                             <span class="sponsor-name"><strong>WSAAC</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Western Student Association Allocations Committee</span></span>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </section>
