--- a/index.html
+++ b/index.html
@@ -396,11 +396,17 @@
                         </div>
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <img src="/imgs/hcb-logo.png" alt="HCB - The Hack Foundation" class="sponsor-img">
-                            <span class="sponsor-name"><strong>HCB</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Fiscal Sponsor: The Hack Foundation</span></span>
+                            <span class="sponsor-name">
+                                <strong class="sponsor-title">HCB</strong>
+                                <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
+                            </span>
                         </a>
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
                             <img src="/imgs/wsaac-logo.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
-                            <span class="sponsor-name"><strong>WSAAC</strong> <br><span style="font-size:0.9em;color:var(--text-muted);">Western Student Association Allocations Committee</span></span>
+                            <span class="sponsor-name">
+                                <strong class="sponsor-title">WSAAC</strong>
+                                <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
+                            </span>
                         </a>
                     </div>
                 </div>
