--- a/index.html
+++ b/index.html
@@ -395,14 +395,14 @@
                             <span class="sponsor-name">You?</span>
                         </div>
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
-                            <img src="/imgs/hcb-logo.png" alt="HCB - The Hack Foundation" class="sponsor-img">
+                            <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
                             <span class="sponsor-name">
                                 <strong class="sponsor-title">HCB</strong>
                                 <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
                             </span>
                         </a>
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
-                            <img src="/imgs/wsaac-logo.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
+                            <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
                             <span class="sponsor-name">
                                 <strong class="sponsor-title">WSAAC</strong>
                                 <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
