--- a/index.html
+++ b/index.html
@@ -385,8 +385,9 @@
 
             <!-- Sponsors Bento -->
             <section class="grid-item sponsor-bento">
-                <div class="section-header">
+                <div class="section-header sponsor-header">
                     <h2>Sponsors & Partners</h2>
+                    <button class="sponsor-interest-btn" onclick="window.open('mailto:contact@wraven.org?subject=Sponsorship%20Interest','_blank')">Become a Sponsor</button>
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
