--- a/index.html
+++ b/index.html
@@ -392,22 +392,21 @@
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
                         <div class="sponsor-item">
-                            <img src="/imgs/birdsquare.png" alt="BirdSec" class="sponsor-img">
+                            <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img">
                             <span class="sponsor-name">You?</span>
+                            <span class="sponsor-subtitle">Your Organization Here!</span>
                         </div>
+
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
-                            <span class="sponsor-name">
-                                <strong class="sponsor-title">HCB</strong>
-                                <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
-                            </span>
+                            <span class="sponsor-name">HCB</span>
+                            <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
                         </a>
+
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
                             <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
-                            <span class="sponsor-name">
-                                <strong class="sponsor-title">WSAAC</strong>
-                                <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
-                            </span>
+                            <span class="sponsor-name">WSAAC</span>
+                            <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
                         </a>
                     </div>
                 </div>
