--- a/index.html
+++ b/index.html
@@ -393,20 +393,26 @@
                     <div class="sponsor-list">
                         <div class="sponsor-item">
                             <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img">
-                            <span class="sponsor-name">You?</span>
-                            <span class="sponsor-subtitle">Your Organization Here!</span>
+                            <span class="sponsor-name">
+                                <span class="sponsor-title">You?</span>
+                                <span class="sponsor-subtitle">Your Organization Here!</span>
+                            </span>
                         </div>
 
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
-                            <span class="sponsor-name">HCB</span>
-                            <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
+                            <span class="sponsor-name">
+                                <span class="sponsor-title">HCB</span>
+                                <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
+                            </span>
                         </a>
 
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
                             <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
-                            <span class="sponsor-name">WSAAC</span>
-                            <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
+                            <span class="sponsor-name">
+                                <span class="sponsor-title">WSAAC</span>
+                                <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
+                            </span>
                         </a>
                     </div>
                 </div>
