--- a/index.html
+++ b/index.html
@@ -394,16 +394,16 @@
                         <div class="sponsor-item">
                             <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img">
                             <span class="sponsor-name">
-                                <span class="sponsor-title">You?</span>
-                                <span class="sponsor-subtitle">Your Organization Here!</span>
+                                <span class="sponsor-title">Your Organization?</span>
+                                <span class="sponsor-subtitle">We'd love your support</span>
                             </span>
                         </div>
 
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
                             <span class="sponsor-name">
-                                <span class="sponsor-title">HCB</span>
-                                <span class="sponsor-subtitle">Fiscal Sponsor: The Hack Foundation</span>
+                                <span class="sponsor-title">HCB (Fiscal Sponsor)</span>
+                                <span class="sponsor-subtitle">The Hack Foundation "Hack Club"</span>
                             </span>
                         </a>
 
@@ -436,9 +436,16 @@
                         <span class="privacy-icon">🔒</span>
                         <span>Privacy Policy</span>
                     </a>
+                    <a href="/keys/wraven.asc" class="privacy-btn" title="PGP Public Key">
+                        <span class="privacy-icon">📬</span>
+                        <span>PGP Contact Key</span>
+                    </a>
+                    <a href="/.well-known/security.txt" class="privacy-btn" title="Vulnerability Disclosure">
+                        <span class="privacy-icon">🛠️</span>
+                        <span>Report a Vulnerability</span>
+                    </a>
                 </div>
             </section>
-        </main>
 
         <!-- Footer -->
         <footer class="footer">
