--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     </a>
                     <a href="/.well-known/security.txt" class="privacy-btn" title="Vulnerability Disclosure">
                         <span class="privacy-icon">🛠️</span>
-                        <span>Report a Vulnerability</span>
+                        <span>Security Policy</span>
                     </a>
                 </div>
             </section>
