--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
                     </a>
                 </div>
             </section>
+        </main>
 
         <!-- Footer -->
         <footer class="footer">
